<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.sample.todoenglishapp.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="Item" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_register"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/register"
        app:showAsAction="ifRoom" />
</menu>
